<resources>
    <string name="app_name">sandu_irina_1091</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="progress_0_10">Progress:0/10</string>
    <string name="select_the_correct_character_for">Select the correct character for:</string>
    <string name="button">Button</string>
    <string name="g">g</string>
    <string name="giyeok">ㄱ</string>
    <string name="nieun">ㄴ</string>
    <string name="digeut">ㄷ</string>
    <string name="rieul">ㄹ</string>
    <string name="mieum">ㅁ</string>
    <string name="bieup">ㅂ</string>
    <string name="siot">ㅅ</string>
    <string name="jieut">ㅈ</string>
    <string name="chieut">ㅊ</string>
    <string name="kieuk">ㅋ</string>
    <string name="tieut">ㅌ</string>
    <string name="m">m</string>
    <string name="eo">eo</string>
    <string name="s">s</string>
    <string name="ye">ye</string>
    <string name="d">d</string>
    <string name="wa">wa</string>
    <string name="k">k</string>
    <string name="i">i</string>
    <string name="u">u</string>
    <string name="o_k">ㅗ</string>
    <string name="u_k">ㅜ</string>
    <string name="yu">ㅠ</string>
    <string name="ae">ㅐ</string>
    <string name="e_k">ㅔ</string>
    <string name="eo_k">ㅓ</string>
    <string name="ye_k">ㅖ</string>
    <string name="yeo_k">ㅕ</string>
    <string name="wo_k">ㅝ</string>
    <string name="we_k">ㅞ</string>
    <string name="wa_k">ㅘ</string>
    <string name="i_k">ㅣ</string>
    <string name="eu_k">ㅡ</string>
    <string name="take_quiz_again">Take quiz again</string>
    <string name="score">Score:</string>
    <string name="begin">Begin</string>
    <string name="korean_letters_name_and_design">Korean letters name and design</string>
    <string name="begin_intro">The Korean alphabet or Hangul consists of 24 basic letters: 14 consonants (ㄱ ㄴ ㄷ ㄹ ㅁ ㅂ ㅅ ㅇ ㅈ ㅊ ㅋ ㅌ ㅍ ㅎ) and 10 vowels (ㅏ ㅑ ㅓ ㅕ ㅗ ㅛ ㅜ ㅠ ㅡ ㅣ). Additionally, as you’ll dive into it, you’ll discover that there are in fact 19 complex letters with 5 tense consonants (ㄲ ㄸ ㅃ ㅉ ㅆ) and 11 complex vowels (ㅢ ㅚ ㅐ ㅟ ㅔ ㅒ ㅖ ㅘ ㅝ ㅙ ㅞ) formed by combining the basic letters. The name “Hangeul” combines the Korean word han (한) – meaning “great” – and geul (글) – meaning “script”. However, the word han is also used to refer to Korea in general, so the name can also translate to “Korean script”.</string>
    <string name="consonants">Consonants:</string>
    <string name="vowels">Vowels:</string>
    <string name="return_to_main_page">Return to main page</string>
</resources>