<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sandu_irina_quiz_score"
    android:background="@drawable/home_bg">
    <TextView
        android:id="@+id/sandu_irina_tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/score"
        android:background="@drawable/custom_text"
        android:gravity="center"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/sandu_irina_home_btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:text="@string/take_quiz_again" />
    <Button
        android:id="@+id/sandu_irina_home_btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:text="@string/return_to_main_page" />
</LinearLayout>